[tool.poetry]
name = "timing-asgi"
version = "0.3.0"
description = "ASGI middleware to emit timing metrics with something like statsd"
authors = ["Steinn Eldjárn Sigurðarson <steinnes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
alog = "^0.9.13"

[tool.poetry.dev-dependencies]
starlette = "^0.12.0"
pytest = "^4.3"
pytest-cov = "^2.6"
requests = "^2.21"
pytest-asyncio = "^0.10.0"
asynctest = "^0.12.2"
flake8 = "^3.7"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
