[project]
name = "timing-asgi"
version = "0.3.2"
description = "ASGI middleware to emit timing metrics with something like statsd"
authors = [
  { name = "Steinn Eldjárn Sigurðarson", email = "steinnes@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[project.urls]
"Source" = "https://github.com/steinnes/timing-asgi"

[tool.poetry]
include = ["LICENSE"]

[tool.poetry.group.dev.dependencies]
starlette = "^0.52.0"
pytest = "^9"
pytest-cov = "^7.0.0"
requests = "^2.32.2"
pytest-asyncio = "^1.3.0"
flake8 = "^7.3"
black = "^26.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
